# doom_agent

./: .gitignore  README.md  _vizdoom.ini  check_actions.py  custom_corridor.cfg  doom_ppo_deadly_corridor.py  eval_doom_agent.py  main.py  make_env.py  play.py  play_dqn.py  play_dqn_level2.py  play_dqn_level3.py  play_dqn_level4.py  play_dqn_level5.py  play_ppo.py  prueba.py  pyproject.toml  script_explanation.md  train.py  train_dqn.py  train_dqn_level2.py  train_dqn_level3.py  train_dqn_level4.py  train_dqn_level5.py  train_ppo.py  wrapper_level3.txt  wrappers.py  wrappers_level4.txt
configs/: basic.cfg  deadly_corridor.cfg  deathmatch_simple.cfg  defend_the_center.cfg  health_gathering_supreme.cfg
runs/Doom_Basic__1764002427/: events.out.tfevents.1764002427.SSMRS3-04959600.1559.0
runs/Doom_Basic__1764002926/: events.out.tfevents.1764002926.SSMRS3-04959600.1652.0
runs/Doom_Basic__1764003171/: events.out.tfevents.1764003171.SSMRS3-04959600.1739.0
runs/Doom_DQN_train_dqn_1_1764601625/: events.out.tfevents.1764601625.SSMRS3-04959600.7783.0
runs/Doom_DQN_train_dqn_1_1765032706/: events.out.tfevents.1765032706.DESKTOP-PHRDRHN.2724.0
runs/Doom_DQN_train_dqn_1_1765032737/: events.out.tfevents.1765032737.DESKTOP-PHRDRHN.2918.0
runs/Doom_DQN_train_dqn_1_1765033512/: events.out.tfevents.1765033512.DESKTOP-PHRDRHN.5203.0
runs/Doom_DQN_train_dqn_1_1765033654/: events.out.tfevents.1765033654.DESKTOP-PHRDRHN.5549.0
runs/Doom_DQN_train_dqn_level2_1_1764604028/: events.out.tfevents.1764604028.SSMRS3-04909600.4703.0
(+62 files in other folders)
