[project]
name = "doom-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[accept-rom-license]>=1.2.2",
    "moviepy>=2.2.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tyro>=0.9.35",
    "vizdoom>=1.2.4",
]
